--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Making a majestic swåeep across northern Georgia, the Caucasus Mountains are id
 <p>https://www.cntraveler.com/galleries/2016-03-31/the-50-most-beautiful-places-in-europe</p>  
 <p>https://www.travelrepublic.co.uk/blog/best-european-city-breaks-2019</p>
 
-  <script src="js/scripts.js">
+  <script>
   	function clicked(elem_id) {
   paragraphs = document.getElementsByClassName("hidden");
   for (var i=0 ; i< paragraphs.length; i++) {paragraphs[i].style.display="none"}
